trunk/Archive2/c8/a8a6c5caa14a6c/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:17:9: error: ‘nope’ was not declared in this scope
         nope
         ^
main.cpp:18:5: error: expected ‘;’ before ‘std’
     std::vector<std::string> words = {
     ^
main.cpp:21:18: error: ‘words’ was not declared in this scope
     std::cout << words << std::endl;
                  ^
